--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.4.123 Kernel Configuration
+# Linux/arm 5.4.129 Kernel Configuration
 #
 
 #
@@ -1307,7 +1307,6 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 CONFIG_OMAP_INTERCONNECT=y
 CONFIG_OMAP_OCP2SCP=y
 # CONFIG_SIMPLE_PM_BUS is not set
-CONFIG_TI_PWMSS=y
 CONFIG_TI_SYSC=y
 # CONFIG_VEXPRESS_CONFIG is not set
 # end of Bus devices
@@ -1484,6 +1483,7 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 #
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
 
@@ -5332,6 +5332,7 @@ CONFIG_PWM_OMAP_DMTIMER=m
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_TIECAP=m
 CONFIG_PWM_TIEHRPWM=m
+CONFIG_PWM_TIPWMSS=y
 CONFIG_PWM_TWL=m
 CONFIG_PWM_TWL_LED=m
 
