greybus: mikrobus patch update for clickid, greybus
Updated Greybus, mikroBUS driver patches for new click ID
adapter

Signed-off-by: vaishnav <vaishnav@beagleboard.org>

--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1935,6 +1935,7 @@ CONFIG_EEPROM_93CX6=y
 # CONFIG_HABANA_AI is not set
 # CONFIG_UACCE is not set
 # CONFIG_PVPANIC is not set
+# CONFIG_MIKROBUS is not set
 # end of Misc devices
 
 #
